# VideoLLaMA2

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/custom/: finetune.sh  finetune_audio.sh  finetune_audio_dlc.sh  finetune_lora.sh  finetune_qlora.sh  finetune_qlora_zero2.sh  pretrain_audio.sh  pretrain_audio_dlc.sh  va_joint_dlc.sh
scripts/eval/: eval_audio_TUT2017.sh  eval_audio_clotho.sh  eval_audio_clothoAQA.sh  eval_audio_video_AVQA.sh  eval_audio_video_AVSD.sh  eval_audio_video_AVSSD.sh  eval_audio_vocalsound.sh  eval_qwen2audio_AIR.sh  eval_qwen2audio_clotho.sh  eval_video_cap_msvc.sh  eval_video_mcqa_egoschema.sh  eval_video_mcqa_mvbench.sh  eval_video_mcqa_perception_test_mcqa.sh  eval_video_mcqa_videomme.sh  eval_video_oqa_activitynet.sh  eval_video_oqa_msvd.sh  eval_video_oqa_vcgpt_1_correctness.sh  eval_video_oqa_vcgpt_2_detail.sh  eval_video_oqa_vcgpt_3_context.sh  eval_video_oqa_vcgpt_4_temporal.sh  eval_video_oqa_vcgpt_5_consistency.sh  eval_video_oqa_vcgpt_activitynet.sh  eval_video_oqa_vcgpt_msvd.sh  eval_video_qa_egoschema.sh  eval_video_qa_gpt_1_correctness.sh  eval_video_qa_gpt_2_detail.sh  eval_video_qa_gpt_3_context.sh  eval_video_qa_gpt_4_temporal.sh  eval_video_qa_gpt_5_consistency.sh  eval_video_qa_gpt_activitynet.sh  eval_video_qa_gpt_msvd.sh  eval_video_qa_msvc.sh  eval_video_qa_mvbench.sh  eval_video_qa_perception_test_mcqa.sh
scripts/siglip/: finetune_audio.sh  finetune_audio_dlc.sh  finetune_gemma2.sh  finetune_mistral.sh  finetune_phi3.sh  finetune_qwen2.sh  pretrain_audio.sh  pretrain_audio_dlc.sh  pretrain_gemma2.sh  pretrain_mistral.sh  pretrain_phi3.sh  pretrain_qwen2.sh  va_joint.sh  va_joint_dlc.sh
scripts/vllava/: finetune.sh  finetune_audio.sh  finetune_audio_dlc.sh  finetune_qwen2.sh  pretrain.sh  pretrain_audio.sh  pretrain_audio_dlc.sh  pretrain_qwen2.sh  va_joint.sh  va_joint_dlc.sh  va_joint_zyx.sh
videollama2/: __init__.py  constants.py  conversation.py  mm_utils.py  train.py  train_flash_attn.py  videollama2_trainer.py
videollama2/eval/: eval_audio_TUT2017.py  eval_audio_clotho.py  eval_audio_clothoAQA.py  eval_audio_video_AVQA.py  eval_audio_video_AVSD.py  eval_audio_video_AVSSD.py  eval_audio_vocalsound.py  eval_benchmark_3_context.py  eval_benchmark_4_temporal.py  eval_video_cap_msvc_correctness.py  eval_video_cap_msvc_detailedness.py  eval_video_mcqa_videomme.py  eval_video_oqa_activitynet.py  eval_video_oqa_vcgpt_1_correctness.py  eval_video_oqa_vcgpt_2_detailed_orientation.py  eval_video_oqa_vcgpt_5_consistency.py  eval_video_qa_mvbench.py  inference_audio.py  inference_audio_video.py  inference_demo.py  inference_demo_modified.py  inference_qwen2audio_AIR.py  inference_qwen2audio_clotho.py  inference_video_cap_msvc.py  inference_video_cap_video_detailed_description.py  inference_video_mcqa_egoschema.py  inference_video_mcqa_mvbench.py  inference_video_mcqa_perception_test_mcqa.py  inference_video_mcqa_videomme.py  inference_video_oqa_activitynet.py  inference_video_oqa_vcgpt.py  (+9 more)
(+58 files in other folders)
